--- a/radif_macros/Cargo.toml
+++ b/radif_macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "adif_macros"
-version = "0.1.0"
+name = "radif_macros"
+version = "1.0.0"
 edition = "2021"
 authors = ["Luca Cireddu <sardylan@gmail.com>"]
 description = "Macros for ADIF format parsing and serialization."
