--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ resolver = "2"
 [workspace.package]
 version = "0.1.0"
 authors = ["Luca Cireddu <sardylan@gmail.com>"]
-license = "GPL-3.0"
+license = "GPL-3.0-only"
 repository = "https://github.com/sardylan/radif.git"
 edition = "2021"
