--- a/radif/Cargo.toml
+++ b/radif/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Luca Cireddu <sardylan@gmail.com>"]
 description = "Rust ADIF format library for parsing and serialization."
-license = "GPL-3"
+license = "GPL-3.0-only"
 readme = "README.md"
 repository = "https://github.com/sardylan/radif.git"
 keywords = ["ADIF", "radio", "hamradio", "ham", "logbook"]
