--- a/radif_macros/Cargo.toml
+++ b/radif_macros/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 edition = "2021"
 authors = ["Luca Cireddu <sardylan@gmail.com>"]
 description = "Macros for ADIF format parsing and serialization."
-license = "GPL-3"
+license = "GPL-3.0-only"
 readme = "README.md"
 repository = "https://github.com/sardylan/radif.git"
 keywords = ["ADIF", "macros", "hamradio", "ham", "internal"]
