--- a/radif/Cargo.toml
+++ b/radif/Cargo.toml
@@ -12,5 +12,6 @@ categories = ["data-structures", "parsing"]
 
 [dependencies]
 radif_macros = { version = "=1.0.0", path = "../radif_macros" }
+async-stream = "0.3.6"
 futures = "0.3.31"
 chrono = "0.4.41"
