--- a/radif/Cargo.toml
+++ b/radif/Cargo.toml
@@ -15,3 +15,9 @@ radif_macros = { version = "=1.0.0", path = "../radif_macros" }
 async-stream = "0.3.6"
 futures = "0.3.31"
 chrono = "0.4.41"
+
+[dev-dependencies]
+anyhow = "1.0.99"
+clap = { version = "4.5.45", features = ["cargo", "color", "derive", "env", "help", "string", "unicode", "usage", "error-context", "suggestions"] }
+tokio = { version = "1.47.1", features = ["full"] }
+tokio-util = { version = "0.7.16", features = ["full"] }
