--- a/radif/Cargo.toml
+++ b/radif/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "radif"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 authors = ["Luca Cireddu <sardylan@gmail.com>"]
 description = "Rust ADIF format library for parsing and serialization."
@@ -13,10 +13,16 @@ categories = ["data-structures", "parsing"]
 [dependencies]
 radif_macros = { version = "=1.1.0", path = "../radif_macros" }
 futures = "0.3.31"
-chrono = "0.4.41"
+chrono = "0.4.42"
+tokio = { version = "1.47.1", features = ["full"], optional = true }
+tokio-util = { version = "0.7.16", features = ["full"], optional = true }
 
 [dev-dependencies]
 anyhow = "1.0.99"
-clap = { version = "4.5.45", features = ["cargo", "color", "derive", "env", "help", "string", "unicode", "usage", "error-context", "suggestions"] }
+clap = { version = "4.5.47", features = ["cargo", "color", "derive", "env", "help", "string", "unicode", "usage", "error-context", "suggestions"] }
 tokio = { version = "1.47.1", features = ["full"] }
 tokio-util = { version = "0.7.16", features = ["full"] }
+
+[features]
+default = ["tokio"]
+tokio = ["dep:tokio", "dep:tokio-util"]
